Fix context menu off screen problem, add Highlighter doc link, fix individual color adjust.

--- a/phylobook/static/css/phylobook.css
+++ b/phylobook/static/css/phylobook.css
@@ -12,6 +12,9 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.highlighterdoc {
+    font-size: .75rem;
+}
 .dropdown-menu {
     font-size: .85rem;
 }
